# nz2-poc-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
benches/: bench_main.rs
benches/benchmarks/: aead.rs  mod.rs  rapidyenc.rs  util.rs
src/: aead.rs  bar.rs  lib.rs  schema.rs  util.rs
src/nz2/: context.rs  download.rs  downloader.rs  mod.rs  range_chunks.rs  upload.rs  uploader.rs
test-data/: cat.jpg.yenc
